Phase2: build dashboard

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 HUBTEL_API_KEY=your_hubtel_api_key
 HUBTEL_API_SECRET=your_hubtel_api_secret
 PAYSTACK_SECRET_KEY=sk_test_758593d76238cb1697ded8d7ac47cdd200769211
-PAYSTACK_CALLBACK_URL= https://scholarsdeskbot-670268c71df9.herokuapp.com/paystack_callback
+PAYSTACK_CALLBACK_URL=https://scholarsdeskbot-670268c71df9.herokuapp.com/paystack_callback
 TELEGRAM_BOT_USERNAME=@
 
 
